Change HashMap → UnifiedMap