@@ -47,7 +47,7 @@ public class RolapNativeTopCount extends RolapNativeSet {
             super(args, evaluator, true);
             this.orderByExpr = orderByExpr;
             this.ascending = ascending;
-            this.topCount = new Integer(count);
+            this.topCount = Integer.valueOf(count);
         }
 
         /**
